--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1829,8 +1829,8 @@ body {
   color: #767676;
 }
 .cid-rs1wh4onln {
-  padding-top: 90px;
-  padding-bottom: 90px;
+  padding-top: 105px;
+  padding-bottom: 0px;
   background-color: #ffffff;
 }
 .cid-rs1wh4onln .title {
@@ -1887,8 +1887,8 @@ body {
   }
 }
 .cid-rs1whmrwmf {
-  padding-top: 90px;
-  padding-bottom: 90px;
+  padding-top: 0px;
+  padding-bottom: 105px;
   background-color: #ffffff;
 }
 .cid-rs1whmrwmf .title {
@@ -1945,8 +1945,8 @@ body {
   }
 }
 .cid-rs1whwUya3 {
-  padding-top: 90px;
-  padding-bottom: 90px;
+  padding-top: 105px;
+  padding-bottom: 0px;
   background-color: #ffffff;
 }
 .cid-rs1whwUya3 .title {
@@ -2003,8 +2003,8 @@ body {
   }
 }
 .cid-rs1whLhowJ {
-  padding-top: 90px;
-  padding-bottom: 90px;
+  padding-top: 0px;
+  padding-bottom: 105px;
   background-color: #ffffff;
 }
 .cid-rs1whLhowJ .title {
@@ -2061,8 +2061,8 @@ body {
   }
 }
 .cid-rs1wi0IJj5 {
-  padding-top: 90px;
-  padding-bottom: 90px;
+  padding-top: 105px;
+  padding-bottom: 105px;
   background-color: #ffffff;
 }
 .cid-rs1wi0IJj5 .title {
@@ -2117,4 +2117,9 @@ body {
   .cid-rs1wi0IJj5 .wrapper {
     padding-top: 1rem;
   }
+}
+.cid-rsed4bYyOt {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #2e2e2e;
 }
